Fixed issue with blurry nested story in Safari.

--- a/app/styles/cpn/_cpn-nested-story.scss
+++ b/app/styles/cpn/_cpn-nested-story.scss
@@ -1,6 +1,10 @@
 [cpn-nested-story] {
     @extend %cpn-story;
     padding: 0;
+    
+    [cpn-story_face] {
+        @include transform(none); // Prevents Safari rending the nested story blurry
+    }
 }
 
 [cpn-nested-story~="width-1"] {
